Add HTML buttons AC and %

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class="calcOuter">
         <div class="display" id="displayBank"></div>
         <div class="display" id="displayMain"></div>
+        <button type="button" class="opButton" id="acButton">AC</button>
+        <button type="button" class="opButton" id="opButtonPercent">%</button>
+        <button type="button" class="opButton" id="opButtonDivide">÷</button>
         <button type="button" class="numButton" id="numButton1">1</button>
         <button type="button" class="numButton" id="numButton2">2</button>
         <button type="button" class="numButton" id="numButton3">3</button>
@@ -28,7 +31,6 @@
         <button type="button" class="opButton" id="opButtonAdd">+</button>
         <button type="button" class="opButton" id="opButtonSubtract">-</button>
         <button type="button" class="opButton" id="opButtonMultiply">*</button>
-        <button type="button" class="opButton" id="opButtonDivide">÷</button>
         <button type="button" class="opButton" id="opButtonSum">=</button>
     </div>
     </div>
