Layout buttons and display CSS

--- a/index.html
+++ b/index.html
@@ -5,33 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculatorini</title>
-    <link rel="styles" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 
 <body>
     <div class="containerMain">
-    <h2>Calculatorini magnificante plus plus</h2>
+    <h2>Calculatorini magnificante plus plus</h2>    
     <div class="calcOuter">
-        <div class="display" id="displayBank"></div>
-        <div class="display" id="displayMain"></div>
-        <button type="button" class="opButton" id="acButton">AC</button>
-        <button type="button" class="opButton" id="opButtonPercent">%</button>
-        <button type="button" class="opButton" id="opButtonDivide">÷</button>
-        <button type="button" class="numButton" id="numButton1">1</button>
-        <button type="button" class="numButton" id="numButton2">2</button>
-        <button type="button" class="numButton" id="numButton3">3</button>
-        <button type="button" class="numButton" id="numButton4">4</button>
-        <button type="button" class="numButton" id="numButton5">5</button>
-        <button type="button" class="numButton" id="numButton6">6</button>
-        <button type="button" class="numButton" id="numButton7">7</button>
-        <button type="button" class="numButton" id="numButton8">8</button>
-        <button type="button" class="numButton" id="numButton9">9</button>
-        <button type="button" class="numButton" id="numButton0">0</button>
-        <button type="button" class="opButton" id="opButtonAdd">+</button>
-        <button type="button" class="opButton" id="opButtonSubtract">-</button>
-        <button type="button" class="opButton" id="opButtonMultiply">*</button>
-        <button type="button" class="opButton" id="opButtonSum">=</button>
+        <div class="containerDisplay" id="containerDisplay">
+            <div class="display" id="displayBank">123</div>
+            <div class="display" id="displayMain">987</div>
+        </div>
+        <div class="containerButtons">
+            <button type="button" class="opButton" id="acButton">AC</button>
+            <button type="button" class="opButton" id="opButtonPercent">%</button>
+            <button type="button" class="opButton" id="opButtonDivide">÷</button>
+            <button type="button" class="numButton" id="numButton1">1</button>
+            <button type="button" class="numButton" id="numButton2">2</button>
+            <button type="button" class="numButton" id="numButton3">3</button>
+            <button type="button" class="numButton" id="numButton4">4</button>
+            <button type="button" class="numButton" id="numButton5">5</button>
+            <button type="button" class="numButton" id="numButton6">6</button>
+            <button type="button" class="numButton" id="numButton7">7</button>
+            <button type="button" class="numButton" id="numButton8">8</button>
+            <button type="button" class="numButton" id="numButton9">9</button>
+            <button type="button" class="numButton" id="numButton0">0</button>
+            <button type="button" class="opButton" id="opButtonAdd">+</button>
+            <button type="button" class="opButton" id="opButtonSubtract">-</button>
+            <button type="button" class="opButton" id="opButtonMultiply">*</button>
+            <button type="button" class="numButton" id="numButtonDot">.</button>
+            <button type="button" class="opButton" id="opButtonSum">=</button>
+        </div>
     </div>
     </div>
 </body> 
