Connect operate() to equals-button, and calculate

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h2>Calculatorini magnificante plus plus</h2>    
     <div class="calcOuter">
         <div class="containerDisplay" id="containerDisplay">
-            <div class="display" id="displayBank">123</div>
-            <div class="display" id="displayMain">987</div>
+            <div class="display" id="displayBank">0</div>
+            <div class="display" id="displayMain">0</div>
         </div>
         <div class="containerButtons">
             <button type="button" class="opButton" id="acButton">AC</button>
@@ -35,7 +35,7 @@
             <button type="button" class="opButton" id="opButtonSubtract">-</button>
             <button type="button" class="opButton" id="opButtonMultiply">*</button>
             <button type="button" class="numButton" id="numButtonDot">.</button>
-            <button type="button" class="opButton" id="opButtonSum">=</button>
+            <button type="button" class="opButtonSum" id="opButtonSum">=</button>
         </div>
     </div>
     </div>
