--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Calculatorini magnificante plus plus</h2>    
     <div class="calcOuter">
         <div class="containerDisplay" id="containerDisplay">
-            <div class="display" id="displayBank">0</div>
+            <div class="display" id="displayBank"></div>
             <div class="display" id="displayMain">0</div>
         </div>
         <div class="containerButtons">
