Evaluate more than a single pair of numbers at a time.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button type="button" class="opButton" id="opButtonAdd">+</button>
             <button type="button" class="opButton" id="opButtonSubtract">-</button>
             <button type="button" class="opButton" id="opButtonMultiply">*</button>
-            <button type="button" class="numButton" id="numButtonDot">.</button>
+            <button type="button" class="dotButton" id="numButtonDot">.</button>
             <button type="button" class="opButtonSum" id="opButtonSum">=</button>
         </div>
     </div>
